Hot fix for z-index on header elements

--- a/src/beta/black-highlighter-beta.css
+++ b/src/beta/black-highlighter-beta.css
@@ -6369,7 +6369,7 @@ div#container-wrap {
 #header h1 a {
 	--wght: 900;
 	display: block;
-	z-index: 9999;
+	z-index: 10;
 	margin-top: calc(((var(--header-height-on-desktop) / 2)) - 0.85em);
 	margin-left: calc(var(--header-height-on-desktop) - 0.75rem);
 	padding: 1.875rem 0 0;
@@ -6394,7 +6394,6 @@ div#container-wrap {
 #header h1 a > span {
 	display: inline-table;
 	position: absolute;
-	z-index: 9999;
 	top: 0;
 	left: 0;
 	width: calc(100% - 2rem);
@@ -6444,7 +6443,7 @@ div#container-wrap {
 #search-top-box {
 	display: flex;
 	position: absolute;
-	z-index: 10;
+	z-index: 12;
 	top: 1.5em;
 	right: calc(3% - 0.25em);
 	align-items: center;
@@ -6570,7 +6569,6 @@ div#container-wrap {
 
 #search-top-box form[id="search-top-box-form"] input[type="text"] {
 	position: absolute;
-	z-index: 98;
 	z-index: 13;
 	right: 0;
 	width: var(--search-width);
@@ -6600,7 +6598,7 @@ div#container-wrap {
 #search-top-box form[id="search-top-box-form"] input[type="submit"] {
 	visibility: visible;
 	position: absolute;
-	z-index: 99;
+	z-index: 14;
 	right: 0;
 	width: var(--search-height);
 	height: var(--search-height);
@@ -6623,7 +6621,7 @@ div#container-wrap {
 #login-status {
 	display: flex;
 	position: absolute;
-	z-index: 9;
+	z-index: 11;
 	top: 1.5em;
 	right: calc(7% - 3em);
 	align-items: center;
@@ -6709,7 +6707,7 @@ div#container-wrap {
 #login-status #account-options {
 	display: none;
 	position: absolute;
-	z-index: 99;
+	z-index: 12;
 	top: 1.5rem;
 	right: 0;
 	width: 10em;
